# zombiegame2

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: release.yml
assets/map_spec/: MAP_SPEC.md  emit_rust.js  gen.js  world.json  zombiegame2-map.html
src/: achievements.rs  audio.rs  bullet.rs  chat.rs  elevator.rs  lobby.rs  main.rs  map.rs  map_data.rs  map_nav.rs  map_obstacles.rs  menu.rs  net.rs  pause.rs  pixelart.rs  player.rs  settings.rs  sync.rs  ui.rs  underground.rs  wave.rs  weapon.rs  world_consts.rs  zombie.rs  zones.rs
